--- a/templates/painel.html
+++ b/templates/painel.html
@@ -58,7 +58,7 @@
         <div class="machine-info">
             <div class="info-item">
                 <span class="info-label">{{ translate('Sistema Operacional') }}</span>
-                <span class="info-value">{{ machine.os_name }}</span>
+                <span class="info-value">{{ machine.os_name }} {{ machine.os_version }}</span>
             </div>
 
             <div class="info-item">
