--- a/templates/search.html
+++ b/templates/search.html
@@ -57,8 +57,8 @@
                     <td>{{ machine.ip_address }}</td>
                     <td>
                         <div class="os-info">
-                            <strong>{{ machine.os_sysname }}</strong>
-                            <small>{{ machine.os_name }} {{ machine.os_version }}</small>
+                            <strong>{{ machine.os_name }}</strong>
+                            <small>{{ machine.os_version }}</small>
                         </div>
                     </td>
                     <td>{{ machine.os_kernel }}</td>
