--- a/templates/machine_details.html
+++ b/templates/machine_details.html
@@ -225,7 +225,7 @@
             <div class="section-header" onclick="toggleSection(this)">
                 <i class="fas fa-cogs"></i>
                 <h3>Running Processes ({{ machine.processes|length }})</h3>
-                <i class="toggle-icon fas fa-chevron-right"></i> <!-- Ícone apontando para a direita -->
+                <i class="toggle-icon fas fa-chevron-right"></i> 
             </div>
             <div class="section-body" style="display: none;">   
                 <div class="table-container">
