--- a/templates/settings.html
+++ b/templates/settings.html
@@ -153,7 +153,7 @@
                     <i class="fas fa-file-download"></i> {{ translate('Gerar PDF') }}
                 </button>
                 <button class="btn btn-outline" onclick="document.getElementById('exportPDFModal').classList.remove('active')">
-                    Cancelar
+                    {{ translate('Cancelar') }}
                 </button>
             </div>
         </div>
